// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ntd should change correctly 1`] = `
<div>
  <div>
    <div>
      ntd
      <input
        data-testid="HW10Input"
        name="ntd"
        value="60"
      />
    </div>
    <div>
      usd
      <input
        data-testid="HW10Input"
        name="usd"
        value="2"
      />
    </div>
  </div>
</div>
`;

exports[`usd should change correctly 1`] = `
<div>
  <div>
    <div>
      ntd
      <input
        data-testid="HW10Input"
        name="ntd"
        value="90"
      />
    </div>
    <div>
      usd
      <input
        data-testid="HW10Input"
        name="usd"
        value="3"
      />
    </div>
  </div>
</div>
`;
